--- a/Projects/NASA-DEVELOP-CoronadoDisasters.html
+++ b/Projects/NASA-DEVELOP-CoronadoDisasters.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Caroline Williams | Central America Disasters</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <title>Stephanie Willsey | Coronado Disasters</title>
+    <link rel="stylesheet" href="../Styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
     <!--- Navigation Bar --->
@@ -13,7 +13,6 @@
     <div class="navbar" id="mynavbar">
       <a href="../index.html">HOME</a>
       <a href="../about.html">ABOUT ME</a>
-      <a href="../resume.html">RESUME</a>
       <a href="../portfolio.html" class="active">PORTFOLIO</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -34,12 +33,12 @@
     <div class="desktop">
       <div class="about_cont">
         <div class="about-left">
-          <img src="../images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="project-image">
+          <img src="NASA DEVELOP Website Images/2024Spring_GSFC_CoronadoDisasters_WebsiteImage.jpg" class="project-image">
         </div>
         <div class="about-right">
           <div class="about-text">
-            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
-            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations to Map Flooding for Disaster Monitoring, Inform Potential Risk, and Prepare for Possible Response</i></h3>
+            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Coronado Disasters Spring 2024 Project</h2>
+            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Investigating Geohazards & Slope Failure Susceptibility Utilizing NASA Earth Observations</i></h3>
           </div>
           <div class="button_buffer">
             <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/using-earth-observations-map-flooding-disaster-monitoring-inform-potential-risk">Project on NASA Applied Sciences</a>
@@ -53,12 +52,12 @@
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
         <div class="project-tablet-left">
-          <img src="../images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="project-tablet-image">
+           <img src="NASA DEVELOP Website Images/2024Spring_GSFC_CoronadoDisasters_WebsiteImage.jpg" class="project-image">
         </div>
-        <div class="project-tablet-right">
-          <div class="project-tablet-text">
-            <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
-            <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Using Earth Observations to Map Flooding for Disaster Monitoring, Inform Potential Risk, and Prepare for Possible Response</i></h3><br>
+        <div class="about-right">
+          <div class="about-text">
+            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Coronado Disasters Spring 2024 Project</h2>
+            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Investigating Geohazards & Slope Failur
           </div>
           <div class="button_buffer">
             <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/using-earth-observations-map-flooding-disaster-monitoring-inform-potential-risk">Project on NASA Applied Sciences</a>
@@ -78,15 +77,14 @@
           <div class="about-left">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
-              <p>Caroline Williams (Project Lead)</p>
-              <p>Lauren Carey</p>
-              <p>Maria De Los Santos</P>
-              <p>Deanna Fanelli</p>
-              <p>Payton Ireland</P>
+              <p>Andrea Slotke (Project Lead)</p>
+              <p>Maggie Drelichman</p>
+              <p>Mikki Arimitsu</P>
+              <p>Alex Behzadi</p>
             </div>
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Fellow/Center Lead:</b></p>
-              <p>Paxton LaJoie</p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Center Lead:</b></p>
+              <p>Stephanie Willsey</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
@@ -96,20 +94,12 @@
           <div class="about-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Kel Markert (NASA SERVIR Science Coordination Office)</p>
-              <p>Eric Anderson (NASA SERVIR Science Coordination Office)</p>
-              <p>Betzy Hernández (NASA SERVIR Science Coordination Office)</p>
-              <p>Dr. Emil Cherrington (NASA SERVIR Science Coordination Office)</p>
-              <p>Vanesa Martin (NASA SERVIR Science Coordination Office)</p>
-              <p>Ronan Lucey (NASA Applied Sciences Disasters Program)</p>
-              <p>Dr. Robert Griffin (University of Alabama Huntsville)</p>
-              <p>Dr. Jeffrey Luvall (NASA Marshall Space Flight Center)</p>
+              <p>Sean McCartney (Goddard Space Flight Center SSAI)</p>
+              <p>Thomas Stanley (Goddard Space Flight Center University of Marlyand - Balitmore)</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Comité Regional de Recursos Hidráulicos (CRRH)</p>
-              <p>Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC)</p>
-              <p>Sistema de la Integración Centroamericana (SICA)</p>
+              <p>The National Park Services (NPS) Southeast Arizona Group (SEAZ)</p>
             </div>
           </div>
         </div>
@@ -126,38 +116,29 @@
           <div class="about-tablet-left">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
-              <p>Caroline Williams (Project Lead)</p>
-              <p>Lauren Carey</p>
-              <p>Maria De Los Santos</P>
-              <p>Deanna Fanelli</p>
-              <p>Payton Ireland</P>
+              <p>Andrea Slotke (Project Lead)</p>
+              <p>Maggie Drelichman</p>
+              <p>Mikki Arimitsu</P>
+              <p>Alex Behzadi</p>
             </div>
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Fellow/Center Lead:</b></p>
-              <p>Paxton LaJoie</p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Center Lead:</b></p>
+              <p>Stephanie Willsey</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
               <p>NASA DEVELOP National Program</p>
             </div>
           </div>
-          <div class="about-tablet-right">
+          <div class="about-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Kel Markert (NASA SERVIR Science Coordination Office)</p>
-              <p>Eric Anderson (NASA SERVIR Science Coordination Office)</p>
-              <p>Betzy Hernández (NASA SERVIR Science Coordination Office)</p>
-              <p>Dr. Emil Cherrington (NASA SERVIR Science Coordination Office)</p>
-              <p>Vanesa Martin (NASA SERVIR Science Coordination Office)</p>
-              <p>Ronan Lucey (NASA Applied Sciences Disasters Program)</p>
-              <p>Dr. Robert Griffin (University of Alabama Huntsville)</p>
-              <p>Dr. Jeffrey Luvall (NASA Marshall Space Flight Center)</p>
+              <p>Sean McCartney (Goddard Space Flight Center SSAI)</p>
+              <p>Thomas Stanley (Goddard Space Flight Center University of Marlyand - Balitmore)</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Comité Regional de Recursos Hidráulicos (CRRH)</p>
-              <p>Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC)</p>
-              <p>Sistema de la Integración Centroamericana (SICA)</p>
+              <p>The National Park Services (NPS) Southeast Arizona Group (SEAZ)</p>
             </div>
           </div>
         </div>
@@ -169,7 +150,7 @@
   <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Abstract:</b></p>
-    <p style="padding-bottom: 20px;">In November 2020, Hurricanes Eta and Iota hit Central America within weeks of each other, causing severe flooding, landslides, and widespread damage. NASA DEVELOP partnered with Comité Regional de Recursos Hidráulicos (CRRH), Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC), and Sistema de la Integración Centroamericana (SICA) to better understand how flooding throughout Central America has impacted and will continue to affect communities, focusing on sites in Guatemala, Honduras, El Salvador, Belize, Nicaragua, western Panama, and eastern Costa Rica from January 2015 to October 2021. The team utilized surface reflectance data from Landsat 7 Enhanced Thematic Mapper Plus (ETM+), Landsat 8 Operational Land Imager (OLI), Sentinel-2 MultiSpectral Instrument (MSI), Suomi National Polar-orbiting Partnership (NPP) Visible Infrared Imaging Radiometer Suite (VIIRS), and Terra Moderate Resolution Imaging Spectroradiometer (MODIS). This project also utilized backscatter data from Sentinel-1 C-band Synthetic Aperture Radar (C-SAR) and elevation data from the Shuttle Radar Topography Mission (SRTM). Incorporating these Earth observations in NASA SERVIR’s Hydrologic Remote Sensing Analysis for Floods (HYDRAFloods) tool run on Google Earth Engine (GEE), the team produced historical surface water maps, a case study analysis of the two hurricanes, and a code tutorial. These results indicated that surface water increased in priority sites from 2015 to 2021, optical and SAR imagery detected similar flood patterns and extent after the hurricanes, and rainfall was concentrated on the east coast of the region. These products allow partners to make informed decisions around flooding preparation and disaster mitigation.
+    <p style="padding-bottom: 20px;">The Coronado National Memorial (CORO), located in Hereford, Arizona, is situated along the United States' southern border, featuring recently established but still incomplete border barriers and roads. This landscape is inherently prone to geohazards, and debris flow due to the steep mountainous topography, complex terrain, monsoonal rains, and freeze/thaw action - and the new infrastructure has exhibited these processes in the form of rockfall, embankment failure, and debris flow. NASA DEVELOP partnered with CORO to conduct a feasibility assessment of Earth observations for identification of geohazards and slope failure susceptibility. Leveraging Earth observations from 2019 to 2023, and geospatial datasets starting from 2008, the study aims to provide tools to determine the focus for damage mitigation, identify areas most susceptible to slope failures, and prioritize at risk assets through three products: change detection maps, slope failure susceptibility maps, and a slope failure prioritization model. With an emphasis on monitoring high-risk areas and prioritizing mitigation efforts, the project addresses a critical gap in remediation strategies and aims to enhance preservation and safety of the region. 
     </p>
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Deliverables:</b></p>
     <div class="homepage_sect2_cont">
@@ -184,11 +165,6 @@
           <p>Download <b>Presentation</b></p>
           </a>
         </li>
-        <li>
-          <a class="featured" href="https://arcg.is/0PW1Wr" target="_blank">
-          <p>View <b>ArcGIS StoryMap</b></p>
-          </a>
-        </li>
       </ul>
     </div>
   </div>
@@ -200,23 +176,26 @@
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Contact</h2>
       <br>
-      <p>Please feel free to contact me at my email address or through my LinkedIn Account below.</p>
+      <p>Don't hesitate to contact me at my email address below to discuss all things forestry, remote sensing, GIS, and AI!</p>
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Email</h2>
       <br>
-      <p>cawilliams719@gmail.com</p>
+      <p>stephaniewillsey90@gmail.com</p>
       <br>
     </div>
   </div>
   <!--- Footer --->
   <div class="top_footer">
     <p style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Contact Me</p>
-    <a href="https://www.linkedin.com/in/caroline-ann-williams/"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/cawilliams719"><i class="fa fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/stephanie-willsey-08992274/"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/StephWill1"><i class="fa fa-github"></i></a>
   </div>
   <div class="bottom_footer">
-    <p><small>&copy; Copyright 2023, Caroline Williams</small></p>
+    <p><small>&copy; Copyright 2024, Stephanie Willsey</small></p>
   </div>
-  <script src="../scripts/icon.js"></script>
+  <script src="Scripts/icon.js"></script>
+  <script src="Scripts/scroll.js"></script>
+  <script src="Scripts/slider.js"></script>
+  <script src="Scripts/lazy-load.js"></script>
   </body>
 </html>
